--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <h1>
         Welcome to the Git website
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad esse fugit omnis et, quo.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad esse fugit omnis et, quo 
     
 </body>
 </html>
