Added one moe extra paragraph to the index.html file.

--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Git website</title>
-</head>
-<body>
-
+  </head>
+  <body>
     <h1>
-        Welcome to the Git website
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad esse fugit omnis et, quo 
-    
-</body>
+      Welcome to the Git website Lorem ipsum dolor sit amet consectetur
+      adipisicing elit. Ad esse fugit omnis et, quo
+    </h1>
+
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate sint
+      nihil, voluptas corporis corrupti ullam doloribus aliquam nulla omnis?
+      Corrupti cumque ex nulla modi, consequatur ullam deleniti enim id
+      molestiae.
+    </p>
+  </body>
 </html>
