More code added to the index.html file.

--- a/index.html
+++ b/index.html
@@ -17,5 +17,15 @@
       Corrupti cumque ex nulla modi, consequatur ullam deleniti enim id
       molestiae.
     </p>
+
+    // From now on one can directly use git push after making changes to the
+    code // by setting up the -> [git push -u origin main]
+
+    <ul>
+      <li>Home</li>
+      <li>About Us</li>
+      <li>Contact Us</li>
+      <li>Address</li>
+    </ul>
   </body>
 </html>
